[package]
name = "durstr2"
version = "0.1.0"
authors = ["Ismail Suddle <iksuddle@gmail.com>"]
edition = "2024"
description = "A simple library for parsing human-readable strings into durations."
license = "MIT"
repository = "https://github.com/iksuddle/durstr"
keywords = ["duration", "parse", "string"]
categories = ["command-line-utilities", "date-and-time", "parser-implementations", "text-processing"]

[dependencies]
thiserror = "2"
